# PyIL

./: .gitignore  .gitmodules  README.md
PyIL/: CMakeLists.txt
PyIL-Studio/: TODO.md  package.json  webpack.config.js
PyIL-Studio/src/: lsp_listener.js  main.js  preload.js  renderer.js
PyIL-Studio/src/html/: editor.html  index.html
PyIL/inject/: CMakeLists.txt  main.cc
PyIL/runtime/: CMakeLists.txt  console.cc  console.hh  entry.cc
PyIL/runtime/il2cpp/: assemblies.cc  assemblies.hh  il2cpp.cc  il2cpp.hh  state.cc  state.hh
PyIL/runtime/il2cpp/utils/: debug.cc  debug.hh
PyIL/runtime/python/: mod_inject.cc  mod_inject.hh  python.cc  python.hh
PyIL/runtime/python/modules/: py_il2cpp.cc  py_il2cpp.hh  py_pyil.cc  py_pyil.hh
PyIL/runtime/python/sdk/: sdk.cc  sdk.hh
PyIL/runtime/sdk/: il2cpp.cc  il2cpp.hh
PyIL/runtime/utils/: path.cc  path.hh
PyIL/sdk/: pyproject.toml
PyIL/sdk/PyIL/game/: __init__.py
PyIL/sdk/src/pyil/bootstrap/: __init__.py  logging_setup.py
PyIL/sdk/src/pyil/il2cpp/: __init__.pyi
